<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorCompany"
            android:gravity="center"
            android:onClick="onLoginWithPhone">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/splash_bg" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:onClick="onLoginWithPhone"
            android:orientation="vertical"
            android:transitionName="@string/transition_ll_phone">

            <TextView
                android:id="@+id/tv_moving"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_15sdp"
                android:onClick="onLoginWithPhone"
                android:paddingEnd="@dimen/_1sdp"
                android:paddingStart="@dimen/_15sdp"
                android:text="@string/get_moving"
                android:textColor="#262626"
                android:textSize="22sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:onClick="onLoginWithPhone"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/_1sdp"
                android:paddingStart="@dimen/_15sdp">

                <ImageView
                    android:id="@+id/iv_flag"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:onClick="onLoginWithPhone"
                    android:scaleType="centerCrop"
                    android:transitionName="@string/transition_iv_flag"
                    app:srcCompat="@drawable/flag" />

                <TextView
                    android:id="@+id/tv_phone_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:gravity="center"
                    android:onClick="onLoginWithPhone"
                    android:text="+880"
                    android:textColor="#0E0E0E"
                    android:textSize="16sp"
                    android:transitionName="@string/transition_tv_code" />

                <TextView
                    android:id="@+id/tv_phone_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:hint="@string/phone_hint"
                    android:onClick="onLoginWithPhone"
                    android:textColorHint="#BFBEBF"
                    android:textSize="17sp"
                    android:transitionName="@string/transition_tv_phone_no" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="#E6E4E6" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:onClick="onRegistrationUI"
            android:padding="@dimen/_5sdp"
            android:text="Or connect with us"
            android:textColor="@color/blue"
            android:textSize="14sp" />
    </LinearLayout>
</FrameLayout>