<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fl_login_with_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.login.LoginWithPasswordActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_phone"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingTop="@dimen/_70sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:text="@string/welcome_back"
                    android:textColor="#262626"
                    android:textColorHint="#DADBDF"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:cursorVisible="true"
                    android:hint="@string/enter_pass"
                    android:inputType="textPassword"
                    android:textColorHint="#DADBDF"
                    android:textSize="18sp" />
            </LinearLayout>

            <com.github.jorgecastilloprz.FABProgressCircle
                android:id="@+id/fab_progress_circle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                app:arcColor="#0F9398">

                <android.support.design.widget.FloatingActionButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_15sdp"
                    app:srcCompat="@drawable/ic_arrow_forward" />
            </com.github.jorgecastilloprz.FABProgressCircle>
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackgroundBorderless"
        android:padding="@dimen/_15sdp"
        android:transitionName="@string/transition_arrow"
        app:srcCompat="@drawable/ic_arrow_back" />
</FrameLayout>