<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fl_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context="com.intense.yolo.activity.registration.RegistrationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/ll_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/_70sdp"
            android:transitionName="@string/transition_ll_phone">

            <TextView
                android:id="@+id/tv_moving"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:text="@string/reg_acc"
                android:textColor="#262626"
                android:textColorHint="#DADBDF"
                android:textSize="18sp"
                android:transitionName="@string/transition_tv_phone_no" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingEnd="@dimen/_1sdp"
                android:paddingStart="@dimen/_10sdp">

                <EditText
                    android:id="@+id/tv_google_registration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/bg_edit_text"
                    android:hint="Phone"
                    android:inputType="phone"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/et_first_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_edit_text"
                        android:hint="First Name"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/et_last_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_edit_text"
                        android:hint="Last Name"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:background="@drawable/bg_edit_text"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:background="@drawable/bg_edit_text"
                    android:hint="Create password"
                    android:inputType="textPassword"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <com.github.jorgecastilloprz.FABProgressCircle
                android:id="@+id/fab_progress_circle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                app:arcColor="#0F9398">

                <android.support.design.widget.FloatingActionButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_15sdp"
                    app:srcCompat="@drawable/ic_arrow_forward" />
            </com.github.jorgecastilloprz.FABProgressCircle>
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackgroundBorderless"
        android:padding="@dimen/_15sdp"
        android:transitionName="@string/transition_arrow"
        app:srcCompat="@drawable/ic_arrow_back" />
</FrameLayout>